--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="sm-box">
           <div class="sm-box-icons">
-            <button class="icon-border">
+            <button aria-label="icon" class="icon-border">
               <svg
                 class="sm-box-imgs"
                 xmlns="http://www.w3.org/2000/svg"
@@ -57,7 +57,7 @@
                 />
               </svg>
             </button>
-            <button class="icon-border">
+            <button aria-label="icon" class="icon-border">
               <svg
                 class="sm-box-imgs"
                 xmlns="http://www.w3.org/2000/svg"
@@ -69,7 +69,7 @@
                 />
               </svg>
             </button>
-            <button class="icon-border">
+            <button aria-label="icon" class="icon-border">
               <svg
                 class="sm-box-imgs"
                 xmlns="http://www.w3.org/2000/svg"
